Successful refactoring. Now merge back into main branch.